fixed an issue where modal pop up text was not centered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,9 +193,9 @@ ul {
         height: 60px;
     }
 
-    #rightOrWrong {
-        text-align: center;
-    }
+   .centered {
+       text-align: center;
+   }
 
 }
 
